      discoloration. ("#define" options exist at the top of src/tuxpaint.c
      to choose which you want.)
      Albert Cahalan <albert@users.sourceforge.net>

    * Now uses "AUDIO_S16SYS" when initializing audio system
      (on Linux/Mac/BeOS); helps sound under Linux on Mac hardware.
      Albert Cahalan <albert@users.sourceforge.net>
    
  * Interface improvements:
    -----------------------
    * Middle and right mouse buttons no longer do anything.
      (No reason to teach kids that all the buttons do the same thing!)

      Note: This can be disabled (resulting in the old-style support for
      all three buttons meaning the same thing) by setting the
      "--nobuttondistinction" option.

    * If middle or right mouse buttons are clicked too much, a pop-up
      appears explaining to click the left button, and includes a small
      picture of a mouse with the left button being 'clicked.'

    * Thumbnail of selected image now shown on "Erase this image?"
      confirmation pop-up.

    * Printer icons on "Print now?" and "You can't print yet" pop-ups.

    * Icons shown in "Save Over?" and "Save [before opening]" pop-ups.

    * Improved 'rubber band line' and stamp outline colors ("XOR" code)
      to make such lines easier to see on certain colors.
    
    * The "noquit" option now prevents the [Escape] key from quitting
      Tux Paint.  ([Alt]+[F4] and the window close button still work.)

    * Tux Paint can now be quit with [Shift]+[Control]+[Escape], as well.
      (Useful for when "noquit" and "fullscreen" are set, and the
      [Alt]+[F4] combination is not possible.)
      
  * Other improvements:
    -------------------
    * Now printing directly via Postscript.
      (So print command can change from "pngtopnm | pnmtops | lpr" to
      simply "lpr").
      Albert Cahalan <albert@users.sf.net>
    
    * Added beige and tan colors.  Changed "Lime" to "Neon Green."
      Renamed "Fuschia" to "Magenta."  Tweaked some color values.